# billpocket-live

./: AUDIT.md  README.md  app.js  index.html  manifest.webmanifest  styles.css  sw.js
.github/workflows/: windows-release.yml
js/: account.js  app.js  bills.js  charts.js  constants.js  dom.js  planning.js  simulator.js  statement-analysis.js  statement-parser.js  storage.js  transactions.js  ui.js  utils.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
test/: parser.test.js
