[package]
name = "billpocket"
version = "1.0.0"
description = "Local-only bill tracker and spending analyser. Zero cloud, zero account."
authors = ["BillPocket"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "billpocket_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
